--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Top Bar -->
   <header class="top-bar">
-    <img src="logo.png" alt="Logo" class="logo" />
+    <!-- <img src="logo.png" alt="Logo" class="logo" /> -->
     <h1 class="site-name">My Website</h1>
   </header>
 
