--- a/benchmarking.html
+++ b/benchmarking.html
@@ -1,13 +1,26 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Bank Benchmarking</title>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <style>
-    select { margin-right: 10px; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
+<body>
+
+  <!-- Top Bar -->
+  <header class="top-bar">
+    <!-- <img src="logo.png" alt="Logo" class="logo" /> -->
+    <h1 class="site-name">My Website</h1>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav class="nav-bar">
+    <a href="index.html">Home</a>
+    <a href="benchmarking.html">Benchmarking</a>
+    <a href="FOSDecisions.html">FOS Decisions</a>
+  </nav>
+</body> 
 <body>
   <h2>Select Up to 5 Banks</h2>
   <select id="bankSelect1"></select>
