--- a/FOSDecisions.html
+++ b/FOSDecisions.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>D3 Sankey Diagram</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
+ 
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <!-- Top Bar -->
+  <header class="top-bar">
+    <!-- <img src="logo.png" alt="Logo" class="logo" /> -->
+    <h1 class="site-name">My Website</h1>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav class="nav-bar">
+    <a href="index.html">Home</a>
+    <a href="benchmarking.html">Benchmarking</a>
+    <a href="FOSDecisions.html">FOS Decisions</a>
+  </nav>
+</body>
+  
+
+
+
   <style>
     body {
       font-family: sans-serif;
