--- a/benchmarking.html
+++ b/benchmarking.html
@@ -22,7 +22,7 @@
     <a href="FOSDecisions.html">FOS Decisions</a>
   </nav>
 </body> 
-<body>
+<main>
   <h2>Select Up to 5 Banks</h2>
   <select id="bankSelect1"></select>
   <select id="bankSelect2"></select>
@@ -33,5 +33,5 @@
   <svg id="radarChart" width="600" height="600"></svg>
 
   <script type="module" src="main.js"></script>
-</body>
+</main>  
 </html>
