--- a/benchmarking.html
+++ b/benchmarking.html
@@ -30,7 +30,7 @@
   <select id="bankSelect4"></select>
   <select id="bankSelect5"></select>
 
-  <svg id="radarChart" width="600" height="600"></svg>
+<svg id="radarChart" viewBox="0 0 600 600" preserveAspectRatio="xMidYMid meet"></svg>
 
   <script type="module" src="main.js"></script>
 
