--- a/benchmarking.html
+++ b/benchmarking.html
@@ -24,11 +24,12 @@
 
 <main>
   <h2>Select Up to 5 Banks</h2>
-  <select id="bankSelect1"></select>
-  <select id="bankSelect2"></select>
-  <select id="bankSelect3"></select>
-  <select id="bankSelect4"></select>
-  <select id="bankSelect5"></select>
+  <select id="bankSelect1" class="bank-select"></select>
+<select id="bankSelect2" class="bank-select"></select>
+<select id="bankSelect3" class="bank-select"></select>
+<select id="bankSelect4" class="bank-select"></select>
+<select id="bankSelect5" class="bank-select"></select>
+
 
 <svg id="radarChart" viewBox="0 0 600 600" preserveAspectRatio="xMidYMid meet"></svg>
 
