--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <p>Main stuff</p>
   </main>
 
+  <div id="search">
+  <input type="text" id="search-input" placeholder="Search articles...">
+</div>
+<div id="search-results"></div>
+<script src="assets/js/search.js"></script>
+
+  
 </body>
 
   
